major changes to watching page, includes comment section as static UI

--- a/src/app/chatbot/chatbot.component.html
+++ b/src/app/chatbot/chatbot.component.html
@@ -5,7 +5,7 @@
   (click)="chatVisible = !chatVisible"
 >
   <p-iconfield style="margin-bottom: 3px">
-    <i class="bi bi-robot"></i>
+    <i class="bi bi-robot" style="color: #18181b;"></i>
   </p-iconfield>
   <!-- <i class="pi pi-discord"></i> -->
 </button>
