--- a/src/app/tv-shows-page/tv-shows-page.component.html
+++ b/src/app/tv-shows-page/tv-shows-page.component.html
@@ -68,7 +68,7 @@
                   [movie]="show"
                   (trailer)="openTrailer(show)"
                   (verifyRequested)="openAgeModal()"
-                  [isSearch]="searchQuery"
+                  [isSearch]="isSearch"
                   [isFiltered]="isFiltered"
                 ></movie-and-tv-card>
               </div>
