--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -66,7 +66,7 @@
               (trailer)="openTrailer(item)"
               [isFiltered]="isFiltered"
               (verifyRequested)="openAgeModal()"
-              [isSearch]="searchQuery"
+              [isSearch]="isSearch"
             ></movie-and-tv-card>
           </div>
         </div>
