fixed bugs in watching page, redirecting bug

--- a/src/app/watching-page/watching-page.component.html
+++ b/src/app/watching-page/watching-page.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="select-section">
           @if(seasonOptions.length > 0 || !isTVShow) {
-          <p-select
+          <p-select *ngIf="isTVShow!==false"
             [options]="seasonOptions"
             [(ngModel)]="selectedSeason"
             placeholder="Select Season"
